--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8012
 server.tomcat.uri-encoding=UTF-8
+mybatis.mapper-locations=classpath:mapper/*.xml
